# agora-gstreamer

./: README.md
agora/libagorac/: agorac.cpp  agorac.h
agora/libagorac/helpers/: agoradecoder.h
gst-agora/plugin-src/: meson.build
release/: install.sh  make-release
